--- a/exploration_notebook_1_regression_project.ipynb
+++ b/exploration_notebook_1_regression_project.ipynb
@@ -18,7 +18,7 @@
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.preprocessing import PolynomialFeatures\n",
     "from sklearn.feature_selection import f_regression, SelectKBest, RFE\n",
-    "\n",
+    "import os\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
     "\n",
