--- a/exploration_notebook_4_regression_project.ipynb
+++ b/exploration_notebook_4_regression_project.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "1724526d",
+   "id": "de7b6abe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "3b79dc0e",
+   "id": "878ee4ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e7ab7c74",
+   "id": "34f1bb69",
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d2ec1a97",
+   "id": "3e1729bd",
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "86fc1123",
+   "id": "20b15c76",
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "3b1bbf8d",
+   "id": "4e58e85d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "e80933f6",
+   "id": "b4164811",
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "ab92a302",
+   "id": "e791ca65",
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "6754c2fc",
+   "id": "77336141",
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "c038a057",
+   "id": "54b3ae71",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,8 +325,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "f7d2f0d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((33880, 6), (14082, 6), (4358, 6))"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1.shape, df2.shape, df3.shape"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "e2002209",
+   "id": "c46121e5",
    "metadata": {},
    "source": [
     "---"
@@ -335,7 +356,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "88ccd5e0",
+   "id": "dd454a9f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +369,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "181d83af",
+   "id": "49e8d14f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +391,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7fc09264",
+   "id": "7f1caa1e",
    "metadata": {},
    "source": [
     "---"
@@ -378,7 +399,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9cb7c077",
+   "id": "84f2de8c",
    "metadata": {},
    "source": [
     "**DF1**"
@@ -387,7 +408,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "a469e2db",
+   "id": "72d0bdbf",
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +430,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "14e08c26",
+   "id": "c4f02fae",
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +453,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "06328051",
+   "id": "82969e33",
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +546,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "3d442536",
+   "id": "56e83d23",
    "metadata": {},
    "outputs": [
     {
@@ -623,7 +644,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "acc94276",
+   "id": "446fa085",
    "metadata": {},
    "outputs": [
     {
@@ -716,7 +737,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "190df11c",
+   "id": "44b987c0",
    "metadata": {},
    "outputs": [
     {
@@ -809,7 +830,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "7e65ca41",
+   "id": "d3fd7acd",
    "metadata": {},
    "outputs": [
     {
@@ -842,7 +863,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "5d8220af",
+   "id": "c6ccceb6",
    "metadata": {},
    "outputs": [
     {
@@ -909,7 +930,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4169892",
+   "id": "34e123eb",
    "metadata": {},
    "source": [
     "---"
@@ -918,7 +939,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "4b90d7d0",
+   "id": "cff2a047",
    "metadata": {},
    "outputs": [
     {
@@ -992,7 +1013,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "5d90ee87",
+   "id": "d5fb79d7",
    "metadata": {},
    "outputs": [
     {
@@ -1072,7 +1093,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "87d74b4d",
+   "id": "63eabdd8",
    "metadata": {},
    "outputs": [
     {
@@ -1172,7 +1193,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "d88194a8",
+   "id": "3b2ca964",
    "metadata": {},
    "outputs": [
     {
@@ -1278,7 +1299,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "4aba9f35",
+   "id": "2c2edb1b",
    "metadata": {},
    "outputs": [
     {
@@ -1387,7 +1408,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "90f16736",
+   "id": "44eabb8b",
    "metadata": {},
    "outputs": [
     {
@@ -1502,7 +1523,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "1ea9360b",
+   "id": "e193318b",
    "metadata": {},
    "outputs": [
     {
@@ -1623,7 +1644,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc688dfb",
+   "id": "07326e1b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1631,7 +1652,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "0f977ad0",
+   "id": "044afcbe",
    "metadata": {},
    "outputs": [
     {
@@ -1662,7 +1683,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "83f8f67e",
+   "id": "b542053a",
    "metadata": {},
    "outputs": [
     {
@@ -1689,7 +1710,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3883e147",
+   "id": "ad2d656f",
    "metadata": {},
    "source": [
     "---"
@@ -1697,7 +1718,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8723ca47",
+   "id": "a1a85585",
    "metadata": {},
    "source": [
     "**DF2**"
@@ -1706,7 +1727,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "3891ccab",
+   "id": "d1cca2d6",
    "metadata": {},
    "outputs": [
     {
@@ -1728,7 +1749,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "3f2035b9",
+   "id": "cc47ad0f",
    "metadata": {},
    "outputs": [
     {
@@ -1751,7 +1772,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "597c8561",
+   "id": "19066ed9",
    "metadata": {},
    "outputs": [
     {
@@ -1844,7 +1865,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "ae3bbaf7",
+   "id": "b3354800",
    "metadata": {},
    "outputs": [
     {
@@ -1942,7 +1963,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "6ef6002e",
+   "id": "4356043f",
    "metadata": {},
    "outputs": [
     {
@@ -2035,7 +2056,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "943c4b67",
+   "id": "9d072ea4",
    "metadata": {},
    "outputs": [
     {
@@ -2128,7 +2149,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "cdaac0ae",
+   "id": "42f956f5",
    "metadata": {},
    "outputs": [
     {
@@ -2161,7 +2182,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "ad3a7e73",
+   "id": "ad6c764b",
    "metadata": {},
    "outputs": [
     {
@@ -2229,7 +2250,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "6eff2616",
+   "id": "3f21bfd9",
    "metadata": {},
    "outputs": [
     {
@@ -2303,7 +2324,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "a37de3b5",
+   "id": "3a5acda4",
    "metadata": {},
    "outputs": [
     {
@@ -2383,7 +2404,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "448635c9",
+   "id": "1107f055",
    "metadata": {},
    "outputs": [
     {
@@ -2483,7 +2504,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "fcd2cd86",
+   "id": "41d56f4e",
    "metadata": {},
    "outputs": [
     {
@@ -2589,7 +2610,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "00de5537",
+   "id": "c6fbbfa8",
    "metadata": {},
    "outputs": [
     {
@@ -2698,7 +2719,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "080feed8",
+   "id": "62474d2a",
    "metadata": {},
    "outputs": [
     {
@@ -2813,7 +2834,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "60f25d47",
+   "id": "ca0f0dec",
    "metadata": {},
    "outputs": [
     {
@@ -2934,7 +2955,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "d1ae6e0e",
+   "id": "87e51045",
    "metadata": {},
    "outputs": [
     {
@@ -2965,7 +2986,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "643e7e49",
+   "id": "2a2f6932",
    "metadata": {},
    "outputs": [
     {
@@ -2992,7 +3013,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a295a83d",
+   "id": "fb71e934",
    "metadata": {},
    "source": [
     "---"
@@ -3000,7 +3021,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f0ad771",
+   "id": "68510b56",
    "metadata": {},
    "source": [
     "**DF3**"
@@ -3009,7 +3030,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "0098cbd7",
+   "id": "a6b23d83",
    "metadata": {},
    "outputs": [
     {
@@ -3031,7 +3052,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "673e5ac2",
+   "id": "3a50cbe0",
    "metadata": {},
    "outputs": [
     {
@@ -3054,7 +3075,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "4d2c8e95",
+   "id": "be16bce9",
    "metadata": {},
    "outputs": [
     {
@@ -3147,7 +3168,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "8c5eb323",
+   "id": "a4a1dc4b",
    "metadata": {},
    "outputs": [
     {
@@ -3245,7 +3266,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "c9bcc5a5",
+   "id": "c3398563",
    "metadata": {},
    "outputs": [
     {
@@ -3338,7 +3359,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "9af7ae8a",
+   "id": "17496a03",
    "metadata": {},
    "outputs": [
     {
@@ -3431,7 +3452,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "97304a27",
+   "id": "499b06a9",
    "metadata": {},
    "outputs": [
     {
@@ -3464,7 +3485,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "2e13ff2f",
+   "id": "c57da5a3",
    "metadata": {},
    "outputs": [
     {
@@ -3532,7 +3553,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "3c1e2215",
+   "id": "d6be7d1d",
    "metadata": {},
    "outputs": [
     {
@@ -3606,7 +3627,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "4db54b70",
+   "id": "98fb9754",
    "metadata": {},
    "outputs": [
     {
@@ -3686,7 +3707,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "b95acde7",
+   "id": "325a7b34",
    "metadata": {},
    "outputs": [
     {
@@ -3786,7 +3807,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "30440306",
+   "id": "7a69adf7",
    "metadata": {},
    "outputs": [
     {
@@ -3892,7 +3913,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "0502108c",
+   "id": "00ce3b82",
    "metadata": {},
    "outputs": [
     {
@@ -4001,7 +4022,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "24edae57",
+   "id": "4c7e3c03",
    "metadata": {},
    "outputs": [
     {
@@ -4116,7 +4137,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "861c026a",
+   "id": "9ccd88d2",
    "metadata": {},
    "outputs": [
     {
@@ -4237,7 +4258,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "22138bd3",
+   "id": "0f646cbe",
    "metadata": {},
    "outputs": [
     {
@@ -4268,7 +4289,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "6218a4b2",
+   "id": "979ad319",
    "metadata": {},
    "outputs": [
     {
@@ -4296,7 +4317,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e41f02a2",
+   "id": "f48b48af",
    "metadata": {},
    "outputs": [],
    "source": []
