--- a/final_report_regression_project.ipynb
+++ b/final_report_regression_project.ipynb
@@ -19,10 +19,34 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f1acdd9",
+   "id": "1b2299d6",
    "metadata": {},
    "source": [
-    "##### Imports"
+    "### Project Description:\n",
+    "- The data science team at zillow are looking to improve their model for predicting home prices of single family residences. This project will explore the zillow dataset looking at the interactions of different variables and how they can inprove the model's predictive value. Then it will develop different regression models for predicting home prices and evaluate their performance to provide more insight to the team. Lastly, based on the exploration and modeling, the project will provide actionable recomendations for the data science team to further develop the project."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "806cfca2",
+   "metadata": {},
+   "source": [
+    "### Project Goals:\n",
+    "- Goal 1: My first goal is to explore the zillow dataset and find which features have the strongest relationship with home prices and will provide the most value to the model's predictive ability\n",
+    "\n",
+    "- Goal 2: My second goal is to develop multiple predictive models based on a wide range of input features and model hyperparameters and evaluate their performance and end with the best performing model to move forward with.\n",
+    "\n",
+    "- Goal 3: My third goal is to provide the team with insight on what region / county that the properties in the data set are located and how that impacts the drivers of home values.\n",
+    "\n",
+    "- Goal 4: My fourth goal is to provide actionable recomendations for further development of the project.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "602327c3",
+   "metadata": {},
+   "source": [
+    "### Imports"
    ]
   },
   {
@@ -57,10 +81,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41f9f342",
+   "id": "1ac9fca3",
    "metadata": {},
    "source": [
-    "#### Acquire, Clean, Split, and Wrangle the data\n",
+    "### Acquire, Clean, Split, and Wrangle the data\n",
     "- The acquire_zillow function checks for a local copy of the dataset as a .csv file and if there is not one it will pull a new copy from the CodeUp database by joining the properties_2017 and the predictions_2017 tables and pulling the columns with the selected features and rows that correspond with home sales closed in 2017 as noted in the predictions_2017 table. This query resulted in 52442 observations (rows). The acquire_zillow is located in the acompanying acquire.py file.\n",
     "\n",
     "- Since the final acquire function was updated to only pull the selected feature columns, the overall number of rows with null values was greatly reduced and dropping all observations with incomplete data resulted in a loss of only 112 rows out of the original 52442. The prep_data function from the acompanying prepare.py file drops all rows with null values. \n",
@@ -115,7 +139,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27960f3a",
+   "id": "72af7ed0",
    "metadata": {},
    "source": [
     "##### Question 1: Is the square footage of the home related to its sale price?"
@@ -123,7 +147,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6e50aab",
+   "id": "a760253e",
    "metadata": {},
    "source": [
     "**Visualization:**"
@@ -161,7 +185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18253fa3",
+   "id": "e312dc0f",
    "metadata": {},
    "source": [
     "**Statistical Testing:**"
@@ -169,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6dbcbfa",
+   "id": "f433b8c7",
    "metadata": {},
    "source": [
     "Hypothesis:\n",
@@ -211,7 +235,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86b0eb71",
+   "id": "2e823b29",
    "metadata": {},
    "source": [
     "##### Question 2: Is the year the home was built related to its sale price?"
@@ -219,7 +243,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0af1d8d1",
+   "id": "d3c50d09",
    "metadata": {},
    "source": [
     "**Visualization:**"
@@ -257,7 +281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4c9dcd3",
+   "id": "a7ca45ba",
    "metadata": {},
    "source": [
     "**Statistical Testing:**"
@@ -265,7 +289,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d1730bd",
+   "id": "00f149d6",
    "metadata": {},
    "source": [
     "Hypothesis:\n",
@@ -277,7 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "f6e3b7c0",
+   "id": "109520f3",
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +331,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f56460e",
+   "id": "291051f2",
    "metadata": {},
    "source": [
     "##### Question 3: Is the number of bedrooms a home has related to its sale price ?"
@@ -315,7 +339,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7792ad66",
+   "id": "b6bbb7cb",
    "metadata": {},
    "source": [
     "**Visualization:**"
@@ -353,7 +377,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e9300aa",
+   "id": "d2d3b51a",
    "metadata": {},
    "source": [
     "**Statistical Testing:**"
@@ -361,7 +385,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c3f833d",
+   "id": "6383e279",
    "metadata": {},
    "source": [
     "Hypothesis:\n",
@@ -373,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "5072fe37",
+   "id": "415d53cc",
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +427,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ba8acac",
+   "id": "9e779059",
    "metadata": {},
    "source": [
     "##### Question 4: Is the number of bathrooms a home has related to its sale price?"
@@ -411,7 +435,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4a96ec5",
+   "id": "319b3eea",
    "metadata": {},
    "source": [
     "**Visualization:**"
@@ -449,7 +473,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1420b57f",
+   "id": "bd43a08d",
    "metadata": {},
    "source": [
     "**Statistical Testing:**"
@@ -457,7 +481,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15a1f4d3",
+   "id": "ae9733b4",
    "metadata": {},
    "source": [
     "Hypothesis:\n",
@@ -469,7 +493,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "0fb5d47f",
+   "id": "eb690a06",
    "metadata": {},
    "outputs": [
     {
@@ -499,6 +523,23 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6bc680d1",
+   "metadata": {},
+   "source": [
+    "#### Takeaways from exploration:\n",
+    "- Multiple variables / features in the zillow dataset were explored but the four listed in this notebook were the most significant\n",
+    "\n",
+    "- All four features explored above (home square footage, year the home was built, number of bedrooms, and number of bathrooms) showed a relationship with the home price as seen in the visualizations and were statistially correlated as seen in the results of the pearsons r correlation tests\n",
+    "\n",
+    "- Different combinations of all four variables will be used in model development because of their relationship with the target variable\n",
+    "\n",
+    "- Many of the other features explored in the dataset had so many unknown values that they were not able to be reliabaly used in a predictive model\n",
+    "\n",
+    "- Other features may be able to be used in future models if more accurate data is gathered "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d477c532",
    "metadata": {},
    "source": [
@@ -507,10 +548,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f5ec2df",
+   "id": "97aeab2a",
    "metadata": {},
    "source": [
-    "#### Prepare the Dataset for Modeling\n",
+    "### Prepare the Dataset for Modeling\n",
     "- After exploring the dataset with modeling and statistical testing it needed to be prepared for modeling with machine learning\n",
     "\n",
     "- x and y variable were assigned for each of the split datasets with y representing the target variable of home price and x representing the features that will be used by the model to predict home price\n",
@@ -553,7 +594,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7b5f41b",
+   "id": "3264fa1c",
    "metadata": {},
    "source": [
     "---"
@@ -561,10 +602,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c98bac3a",
+   "id": "a0f2de23",
    "metadata": {},
    "source": [
-    "#### Feature selection / ranking\n",
+    "### Feature selection / ranking\n",
     "- A recursive feature elimination model was used to evaluate which of the selected features were most related to the target variable and the results were used during model development"
    ]
   },
@@ -646,7 +687,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "458c5f78",
+   "id": "c80770c4",
    "metadata": {},
    "source": [
     "---"
@@ -654,10 +695,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f4c130a",
+   "id": "b4e0f486",
    "metadata": {},
    "source": [
-    "#### Predictive modeling\n",
+    "### Predictive modeling\n",
     "- Multiple models with different features, multiple model types, and multiple model hyperparameters were created and evaluate during the project. The three best performing models are included below\n",
     "\n",
     "- A predictions dataframe was created to enter the results from each model so they can be compared side by side\n",
@@ -804,10 +845,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c1863a5",
+   "id": "3ce180eb",
    "metadata": {},
    "source": [
-    "The best model reduced the error of home price prediction by $176,415.91 over baseline prediction (median home price) with the validate dataset"
+    "The best model (polynomial only interactions) reduced the error of home price prediction by $176,415.91 over baseline prediction (median home price) with the validate dataset"
    ]
   },
   {
@@ -820,17 +861,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1222656e",
+   "id": "42c9c562",
    "metadata": {},
    "source": [
-    "#### Evaluate the best model on the test data\n",
-    "- "
+    "### Evaluate the best model on the test data\n",
+    "- The polynomial model with only interactions and with square footage, year built, bathroom count, and bedroom count as input features performed the best with the validate dataset and will be used for the test dataset"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "d97503f3",
+   "id": "b492e38a",
    "metadata": {},
    "outputs": [
     {
@@ -889,15 +930,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6173858",
+   "id": "ac933632",
    "metadata": {},
    "source": [
-    "The model reduced the error in home price prediction by $205,486.48 from the baseline predicted home price (median home price)"
+    "The polynomial only interactions model reduced the error in home price prediction by $205,486.48 from the baseline predicted home price (median home price) for the test dataset"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "045f6ac8",
+   "id": "80b7bdaf",
    "metadata": {},
    "source": [
     "---"
@@ -905,10 +946,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0707b405",
+   "id": "74fe8f51",
    "metadata": {},
    "source": [
-    "#### Improving Model Accuracy by Splitting the Dataset by Region\n",
+    "### Improving Model Accuracy by Splitting the Dataset by Region\n",
     "- After developing the above primary model that performed notably better than baseline and not being able to improve on that performance through the use of additional features or manipulation of hyperparameters other options for model improvement were explored\n",
     "\n",
     "- During data exploration it was noted that the range of home prices were different between regions so I decided to explore seperating the dataset into three datasets based on region and running the best performing primary model on each seperately\n"
@@ -1000,7 +1041,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "e6aac5fc",
+   "id": "16eef4dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1059,7 +1100,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "6f2829b6",
+   "id": "a4886961",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1118,7 +1159,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "3d84e9b6",
+   "id": "cb304ab8",
    "metadata": {},
    "outputs": [
     {
@@ -1171,7 +1212,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a2fff85",
+   "id": "efef2d05",
    "metadata": {},
    "source": [
     "After splitting the dataset by region, on average the model reduced the error in home price prediction by $253,676.67 from the baseline home price prediction (median home value) which is an improvement of 69.5% from the dataset not seperated by region\n",
@@ -1182,11 +1223,51 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "edfb8244",
+   "cell_type": "markdown",
+   "id": "866241f1",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "### Summary:\n",
+    "- Goal 1 was to explore the zillow dataset and find features with the strongest relationship to home prices and that could be used to improve the predictive model. The best features found during data exploration were the home's square footage, the year the home was built, the number of bedrooms the home has and the number of bathrooms the home has.\n",
+    "\n",
+    "- Goal 2 was to find the best performing predictive regression model that can be used to gain further insight on predicting home price. This project found that the polynomial model with only interactions and with square footage, year built, bathroom count, and bedroom count as input features performed the best. Further investigation on improving the model's performance resulted in a 69.5% improvement in reduction of root mean squared error by splitting the dataset into three datasets based on region (fips code).\n",
+    "\n",
+    "- Goal 3 was to provide insight into what region the homes were located in. The dataset has a column labeled 'fips' which is the Federal information processing standards - for this project specifically relating to location of the property with the first two numbers representing the state and the last three numbers representing the county code. In this data set the values in the fips column are missing a leading '0' for the state code of '06' representing the state of California.\n",
+    "    - fips code 06037 = Los Angeles, CA\n",
+    "    - fips code 06059 = Orange County, CA\n",
+    "    - fips code 06111 = Ventura County, CA\n",
+    "    \n",
+    "- Goal 4 was to provide actionable recomendations which are included in the section below"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "342c2ba1",
+   "metadata": {},
+   "source": [
+    "### Recomendations:\n",
+    "- Since so many of the features in the zillow dataset had a significant amount of missing values it would be valueable to find other sources of historical data for the homes in the dataset and see if some of those values could be filled. In many cases over half of the observations had missing values in a column and using a measure of central tendencey to fill the values did not provide valuable information.\n",
+    "\n",
+    "- The best performing model from this project should be compared to the current model to evaluate performance differences and to inform updates to the current model.\n",
+    "\n",
+    "- Since splitting the data by region and modeling each region seperately increased the model's performance the current model should also be tested with the data split by region to see how it impacts the model's performance."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff4cc51c",
+   "metadata": {},
+   "source": [
+    "### Next Steps:\n",
+    "- Further investigation into features that relate to home price is needed to develop a more accurate model. This will be especially important if updated data that fills in the missing values is obtained.\n",
+    "\n",
+    "- This project found that splitting the dataset by region then modeling each seperately increased the model's accuracy but it was only the first step in exploring this feature manipulation and it should be explored further.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6a14721a",
+   "metadata": {},
    "source": []
   }
  ],
