--- a/final_report_regression_project.ipynb
+++ b/final_report_regression_project.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b2299d6",
+   "id": "f52db809",
    "metadata": {},
    "source": [
     "### Project Description:\n",
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "806cfca2",
+   "id": "7e69b24b",
    "metadata": {},
    "source": [
     "### Project Goals:\n",
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "602327c3",
+   "id": "ba2bf62f",
    "metadata": {},
    "source": [
     "### Imports"
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ac9fca3",
+   "id": "f7f4db79",
    "metadata": {},
    "source": [
     "### Acquire, Clean, Split, and Wrangle the data\n",
@@ -134,12 +134,15 @@
    "id": "ee7f0ec1",
    "metadata": {},
    "source": [
-    "### Explore Variable Interactions with Visualizations and Statistical Testing"
+    "### Explore Variable Interactions with Visualizations and Statistical Testing\n",
+    "- In this section each of the primary features found in the zillow dataset will be compared to the home price to evaluate their relationship with the target variable\n",
+    "\n",
+    "- Each feature will be evaluated with visualizations and with statistical tests to look at their relationship as a driver of home price."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "72af7ed0",
+   "id": "0466f2d9",
    "metadata": {},
    "source": [
     "##### Question 1: Is the square footage of the home related to its sale price?"
@@ -147,7 +150,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a760253e",
+   "id": "f33ecc77",
    "metadata": {},
    "source": [
     "**Visualization:**"
@@ -185,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e312dc0f",
+   "id": "58622fc7",
    "metadata": {},
    "source": [
     "**Statistical Testing:**"
@@ -193,7 +196,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f433b8c7",
+   "id": "76130897",
    "metadata": {},
    "source": [
     "Hypothesis:\n",
@@ -235,7 +238,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e823b29",
+   "id": "d3089cee",
    "metadata": {},
    "source": [
     "##### Question 2: Is the year the home was built related to its sale price?"
@@ -243,7 +246,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3c50d09",
+   "id": "a5499010",
    "metadata": {},
    "source": [
     "**Visualization:**"
@@ -281,7 +284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7ca45ba",
+   "id": "98b92eed",
    "metadata": {},
    "source": [
     "**Statistical Testing:**"
@@ -289,7 +292,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00f149d6",
+   "id": "7c1ff4dc",
    "metadata": {},
    "source": [
     "Hypothesis:\n",
@@ -301,7 +304,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "109520f3",
+   "id": "0ccdf78e",
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +334,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "291051f2",
+   "id": "556cacc8",
    "metadata": {},
    "source": [
     "##### Question 3: Is the number of bedrooms a home has related to its sale price ?"
@@ -339,7 +342,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6bbb7cb",
+   "id": "f5b46d22",
    "metadata": {},
    "source": [
     "**Visualization:**"
@@ -377,7 +380,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2d3b51a",
+   "id": "70628001",
    "metadata": {},
    "source": [
     "**Statistical Testing:**"
@@ -385,7 +388,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6383e279",
+   "id": "ee3e10fb",
    "metadata": {},
    "source": [
     "Hypothesis:\n",
@@ -397,7 +400,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "415d53cc",
+   "id": "373deb23",
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +430,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e779059",
+   "id": "7f9445e5",
    "metadata": {},
    "source": [
     "##### Question 4: Is the number of bathrooms a home has related to its sale price?"
@@ -435,7 +438,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "319b3eea",
+   "id": "20522899",
    "metadata": {},
    "source": [
     "**Visualization:**"
@@ -473,7 +476,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd43a08d",
+   "id": "3e03e7b4",
    "metadata": {},
    "source": [
     "**Statistical Testing:**"
@@ -481,7 +484,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae9733b4",
+   "id": "7b24f753",
    "metadata": {},
    "source": [
     "Hypothesis:\n",
@@ -493,7 +496,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "eb690a06",
+   "id": "6611afb8",
    "metadata": {},
    "outputs": [
     {
@@ -523,7 +526,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6bc680d1",
+   "id": "2cded47f",
    "metadata": {},
    "source": [
     "#### Takeaways from exploration:\n",
@@ -548,7 +551,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97aeab2a",
+   "id": "1ea09bde",
    "metadata": {},
    "source": [
     "### Prepare the Dataset for Modeling\n",
@@ -594,7 +597,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3264fa1c",
+   "id": "a199e52d",
    "metadata": {},
    "source": [
     "---"
@@ -602,7 +605,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0f2de23",
+   "id": "f070f01a",
    "metadata": {},
    "source": [
     "### Feature selection / ranking\n",
@@ -687,7 +690,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c80770c4",
+   "id": "e4a8eb94",
    "metadata": {},
    "source": [
     "---"
@@ -695,7 +698,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4e0f486",
+   "id": "54cd0a89",
    "metadata": {},
    "source": [
     "### Predictive modeling\n",
@@ -845,7 +848,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ce180eb",
+   "id": "d5afd8ed",
    "metadata": {},
    "source": [
     "The best model (polynomial only interactions) reduced the error of home price prediction by $176,415.91 over baseline prediction (median home price) with the validate dataset"
@@ -861,7 +864,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42c9c562",
+   "id": "76d6b7f3",
    "metadata": {},
    "source": [
     "### Evaluate the best model on the test data\n",
@@ -871,7 +874,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "b492e38a",
+   "id": "b9bdbab5",
    "metadata": {},
    "outputs": [
     {
@@ -930,7 +933,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac933632",
+   "id": "25193028",
    "metadata": {},
    "source": [
     "The polynomial only interactions model reduced the error in home price prediction by $205,486.48 from the baseline predicted home price (median home price) for the test dataset"
@@ -938,7 +941,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80b7bdaf",
+   "id": "8b765073",
    "metadata": {},
    "source": [
     "---"
@@ -946,7 +949,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74fe8f51",
+   "id": "31c142e0",
    "metadata": {},
    "source": [
     "### Improving Model Accuracy by Splitting the Dataset by Region\n",
@@ -1041,7 +1044,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "16eef4dc",
+   "id": "415d2bdb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1100,7 +1103,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "a4886961",
+   "id": "4336b984",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1159,7 +1162,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "cb304ab8",
+   "id": "61bf2e79",
    "metadata": {},
    "outputs": [
     {
@@ -1212,7 +1215,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "efef2d05",
+   "id": "7e0ca02a",
    "metadata": {},
    "source": [
     "After splitting the dataset by region, on average the model reduced the error in home price prediction by $253,676.67 from the baseline home price prediction (median home value) which is an improvement of 69.5% from the dataset not seperated by region\n",
@@ -1224,7 +1227,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "866241f1",
+   "id": "1eaff08c",
    "metadata": {},
    "source": [
     "### Summary:\n",
@@ -1242,7 +1245,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "342c2ba1",
+   "id": "d95f9c73",
    "metadata": {},
    "source": [
     "### Recomendations:\n",
@@ -1255,7 +1258,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff4cc51c",
+   "id": "cbbe58cf",
    "metadata": {},
    "source": [
     "### Next Steps:\n",
@@ -1266,7 +1269,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a14721a",
+   "id": "9fe13684",
    "metadata": {},
    "source": []
   }
